fix: remove padding around search matches
Padding caused matches within code snippets and tags to look ugly.

--- a/workflowy.user.styl
+++ b/workflowy.user.styl
@@ -137,7 +137,6 @@
     .contentMatch // search results
         color: c-search !important
         font-weight: fw-bold !important
-        {bubble}
         background-color: yellow !important
     .notes // notes
         .content
